Update Example(High Intervention and Infectivity).cfg

--- a/Disease-Transmission-Simulator/Example(High Intervention and Infectivity).cfg
+++ b/Disease-Transmission-Simulator/Example(High Intervention and Infectivity).cfg
@@ -2,7 +2,7 @@
 #
 # This configuration models a very contagious disease:
 # - High transmission rates
-# - Low intervention effectiveness (disease spreads easily)
+# - High intervention effectiveness (disease spreads easily)
 # - High reinfection potential
 #
 # Expected outcome: Still high >90% attack rate, rapid spread, short duration
@@ -30,7 +30,7 @@ tpi: 0.85		# infected transmission probability (extremely contagious)
 # Disease progression parameters
 de: 2			# days in exposed period (short incubation)
 di: 6			# days in infected period
-rp: 0.20		# recovery probability (LOW - 60% become susceptible again)
+rp: 0.20		# recovery probability 
 
 # Behavioral parameters
 ap: 0.40		# asymptomatic probability (many don't know they're sick)
@@ -41,4 +41,5 @@ ip: 0.80		# isolation probability (low - many continue activities)
 
 # NOTE: This scenario demonstrates how quickly a highly infectious disease
 # can spread through a population even with higher interventions.
+
 # Most of the population will be infected within 20-30 days.
